@@ -192,8 +192,8 @@ module ActiveMerchant #:nodoc:
       def determine_funding_source(source)
         case 
         when source.is_a?(String) then :vault
-        when CreditCard.card_companies.keys.include?(source.type) then :credit_card
-        when source.type == 'check' then :check
+        when CreditCard.card_companies.keys.include?(card_brand(source)) then :credit_card
+        when card_brand(source) == 'check' then :check
         else raise ArgumentError, "Unsupported funding source provided"
         end
       end
