@@ -270,7 +270,7 @@ module ActiveMerchant #:nodoc:
           xml.tag! 'expirationMonth', format(creditcard.month, :two_digits)
           xml.tag! 'expirationYear', format(creditcard.year, :four_digits)
           xml.tag!('cvNumber', creditcard.verification_value) unless (@options[:ignore_cvv] || creditcard.verification_value.blank? )
-          xml.tag! 'cardType', @@credit_card_codes[creditcard.type.to_sym]
+          xml.tag! 'cardType', @@credit_card_codes[card_brand(creditcard).to_sym]
         end
       end
 
