@@ -7,11 +7,11 @@ class PaypalTest < Test::Unit::TestCase
     @gateway = PaypalGateway.new(fixtures(:paypal_certificate))
 
     @creditcard = CreditCard.new(
-      :type                => "Visa",
+      :type                => "visa",
       :number              => "4381258770269608", # Use a generated CC from the paypal Sandbox
       :verification_value => "000",
       :month               => 1,
-      :year                => 2008,
+      :year                => Time.now.year + 1,
       :first_name          => 'Fred',
       :last_name           => 'Brooks'
     )
@@ -63,7 +63,7 @@ class PaypalTest < Test::Unit::TestCase
     response = @gateway.authorize(@amount, @creditcard, @params)
     assert_success response
     assert response.params['transaction_id']
-    assert_equal '3.00', response.params['amount']
+    assert_equal '1.00', response.params['amount']
     assert_equal 'USD', response.params['amount_currency_id']
   end
   
@@ -100,7 +100,7 @@ class PaypalTest < Test::Unit::TestCase
     response = @gateway.capture(@amount, auth.authorization)
     assert_success response
     assert response.params['transaction_id']
-    assert_equal '3.00', response.params['gross_amount']
+    assert_equal '1.00', response.params['gross_amount']
     assert_equal 'USD', response.params['gross_amount_currency_id']
   end
   
@@ -119,11 +119,11 @@ class PaypalTest < Test::Unit::TestCase
     assert_success credit
     assert credit.test?
     assert_equal 'USD',  credit.params['net_refund_amount_currency_id']
-    assert_equal '2.61', credit.params['net_refund_amount']
+    assert_equal '0.67', credit.params['net_refund_amount']
     assert_equal 'USD',  credit.params['gross_refund_amount_currency_id']
-    assert_equal '3.00', credit.params['gross_refund_amount']
+    assert_equal '1.00', credit.params['gross_refund_amount']
     assert_equal 'USD',  credit.params['fee_refund_amount_currency_id']
-    assert_equal '0.39', credit.params['fee_refund_amount']
+    assert_equal '0.33', credit.params['fee_refund_amount']
   end
   
   def test_failed_voiding
